--- a/ProyectoFinal-Aplicada2/_Imports.razor
+++ b/ProyectoFinal-Aplicada2/_Imports.razor
@@ -22,4 +22,4 @@
 @inject IToastService toastService
 @using ProyectoFinal_Aplicada2.Helpers;
 @using ProyectoFinal_Aplicada2.Paginando;
-
+@using ProyectoFinal_Aplicada2.Data
