--- a/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
@@ -129,7 +129,6 @@
 
     [Parameter]
     public int Id { get; set; }
-    private string mensaje { get; set; }
     private string seleccionado { get; set; }
     private int cantidad { get; set; }
 
@@ -170,7 +169,9 @@
     private void Nuevo()
     {
         this.ventas = new Ventas();
-        mensaje = string.Empty;
+        seleccionado = string.Empty;
+        cantidad = 0;
+        precioVenta = 0;
     }
 
     private void Guardar()
@@ -184,6 +185,9 @@
         if(ventascontroller.Guardar(ventas))
         {
             toastService.ShowSuccess("Has guardado la venta exitosamente","Guardado!");
+             seleccionado = string.Empty;
+             cantidad = 0;
+             precioVenta = 0;
             this.ventas = new Ventas();
         }
         else
@@ -198,6 +202,9 @@
         {
             toastService.ShowInfo("Has eliminado la venta exitosamente","Eliminado!");
             this.ventas = new Ventas();
+             seleccionado = string.Empty;
+             cantidad = 0;
+             precioVenta = 0;
         } else
         {
             toastService.ShowWarning("No se pudo eliminar la venta","No eliminado");
