--- a/ProyectoFinal-Aplicada2/Pages/PagosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/PagosComponent.razor
@@ -170,13 +170,13 @@
         {
             pagoscontroller.Guardar(pagos);
             toastService.ShowSuccess("Has modificado el pago exitosamente", "Modificado!");
-            this.pagos = new Pagos();
-
+            Nuevo();
         } else if(pagos.PagoId == 0)
         {
             pagoscontroller.Guardar(pagos);
             toastService.ShowSuccess("Has guardado el pago exitosamente", "Guardado!");
             this.pagos = new Pagos();
+            Nuevo();
         } else
         {
             toastService.ShowError("No se guardar", "Error!");
@@ -245,6 +245,7 @@
         Pago = 0;
         TipoPago = string.Empty;
         CompraId = string.Empty;
+        
     }
 
     private bool Validar()
