--- a/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
@@ -64,7 +64,7 @@ else
                     <td>@item.EmailUsuario</td>
                     <td>@item.NivelUsuario</td>
                     <td>@item.FechaIngreso.ToString("dd/MM/yyyy")</td>
-                    <td><a class="btn btn-outline-info" href="ConsultaUsuarios/@item.UsuarioId">Ver</a></td>
+                    <td><a class="btn btn-outline-info" href="Usuarios/@item.UsuarioId">Ver</a></td>
                 </tr>
             }
         </tbody>
