--- a/ProyectoFinal-Aplicada2/Pages/PagosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/PagosComponent.razor
@@ -62,7 +62,6 @@
                         <option value="@item.CompraId">@item.DescripcionCompra</option>
                     }
                 </InputSelect>
-                <button type="button" class="btn btn-info" @onclick="AgregarCompra" @onchange="CalcularPagoTotal">Agregar</button>
             </div>
 
             <div class="col">
@@ -86,6 +85,7 @@
             <div class="col">
                 <label for="Pago">Pago</label>
                 <InputNumber @bind-Value="Pago" class="form-control"></InputNumber>
+                <button type="button" class="btn btn-info" @onclick="AgregarCompra" @onchange="CalcularPagoTotal">Agregar</button>
             </div>
 
         </div>
@@ -112,7 +112,7 @@
                         <td>@item.CompraId</td>
                         <td>@item.TipoPago</td>
                         <td>@item.Pago</td>
-                        <th><button class="btn btn-danger" @onclick="(()=>EliminarDetalle(item))">Remover</button></th>
+                        <th><button class="btn btn-danger" @onclick="(()=>RemoverDetalle(item))">Remover</button></th>
                     </tr>
                 }
             </tbody>
@@ -179,7 +179,7 @@
             Nuevo();
         } else
         {
-            toastService.ShowError("No se guardar", "Error!");
+            toastService.ShowError("No se pudo guardar", "Error!");
         }
 
     }
@@ -219,11 +219,6 @@
         }
 
         pagos.PagoTotal = total;
-    }
-
-    private void EliminarDetalle(PagosDetalle pagosDetalle)
-    {
-        pagos.PagosDetalles.Remove(pagosDetalle);
     }
 
     private void Buscar()
