Agregando al usuario en el Item de la consulta

--- a/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
@@ -64,6 +64,7 @@ else
                     <td>@item.NombrePersona</td>
                     <td>@item.EmailUsuario</td>
                     <td>@item.NivelUsuario</td>
+                    <td>@item.NombreUsuario</td>
                     <td>@item.FechaIngreso.ToString("dd/MM/yyyy")</td>
                     <td><a class="btn btn-outline-info" href="ConsultaUsuarios/@item.UsuarioId">Ver</a></td>
                 </tr>
