--- a/ProyectoFinal-Aplicada2/Pages/ProductosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ProductosComponent.razor
@@ -126,7 +126,7 @@
             this.productos = new Productos();
         } else
         {
-            toastService.ShowError("No se guardar", "Error!");
+            toastService.ShowError("No se puedo guardar", "Error!");
         }
 
     }
