--- a/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
@@ -175,7 +175,7 @@
                 }
                 else
                 {
-                    toastService.ShowError("No se pudo modificar","Erro!");
+                    toastService.ShowError("No se pudo modificar","Error!");
                 }
 
             }
