Creando otra migración para la base de datos

--- a/ProyectoFinal-Aplicada2/Pages/LoginComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/LoginComponent.razor
@@ -4,8 +4,15 @@
 
 <h3>Login</h3>
 
-@code {
+<EditForm Model="usuarios">
 
+</EditForm>
+
+
+@code {
+    Usuarios usuarios = new Usuarios();
+
+    
 
 
 }
