--- a/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaUsuarios.razor
@@ -52,6 +52,7 @@ else
                 <th>Nombre</th>
                 <th>Email</th>
                 <th>Nivel de Usuario</th>
+                <th>Usuario</th>
                 <th>Fecha de Ingreso</th>
                 <th></th>
             </tr>
