--- a/ProyectoFinal-Aplicada2/Shared/MainLayout.razor
+++ b/ProyectoFinal-Aplicada2/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 <div class="main">
     <div class="top-row px-4">
         <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        <a href="login" target="_blank">Login</a>
+        <a href="login">Login</a>
         <BlazoredToasts />
     </div>
     <div class="content px-4">
