--- a/ProyectoFinal-Aplicada2/Pages/LoginComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/LoginComponent.razor
@@ -1,18 +1,58 @@
 ﻿@page "/login"
 
 
-
 <h3>Login</h3>
 
-<EditForm Model="usuarios">
+<EditForm Model="Usuarios" OnValidSubmit="EvaluarExistenciausuario">
+
+    <div class="form-group">
+        <label for="NombreUsuario">Nombre de usuario</label>
+        <InputText @bind-Value="nombreusaurio" class="form-control" placeholder="Nombre aquí"></InputText>
+    </div>
+
+    <div class="form-control">
+        <label for="ClaveUsuario">Clave del usuario</label>
+        <InputText @bind-Value="clave" class="form-control" placeholder="Su clave de usuario"></InputText>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Registrarse</button>
+    <button type="button" @onclick="Nuevo" class="btn btn-info">Limpiar</button>
 
 </EditForm>
 
+//No modifica la compra 
+//No elimina el pago 
+//Detalle de venta no dice que se modifica
+ //En todas las consultas, hay que darle a la funcion que pagina y que el contador sea cero
+
 
 @code {
-    Usuarios usuarios = new Usuarios();
 
-    
+    Usuarios Usuarios = new Usuarios();
+    Contexto contexto = new Contexto();
+    private string nombreusaurio;
+    private string clave;
+    private void EvaluarExistenciausuario()
+    {
+        if(contexto.Usuarios.Any(A=>A.NombreUsuario != nombreusaurio))
+        {
+            toastService.ShowError("No existe este nombre de usuario","Error");
+            return;
+        }
 
+        if(contexto.Usuarios.Any(A=>A.Clave != clave))
+        {
+            toastService.ShowError("No existe esta clave","Error");
+        } else
+        {
+            toastService.ShowSuccess("Te has logeado correctamente","Logeado!");
+        }
+    }
+
+    private void Nuevo()
+    {
+        nombreusaurio = string.Empty;
+        clave = string.Empty;
+    }
 
 }
